# experiments

./: .clang-format  .gitignore  CMakeLists.txt
src/: Command_table_parser.cpp  accumulate_strings.cpp  blink_timer.cpp  callingFabricFunctionWithDifferentArguments.cpp  countWords.cpp  dir_scanner.cpp  er_kmac_generator.cpp  externCexperiment.cpp  findUniqueWithXOR.cpp  functionPointerSignature.cpp  hashgen.cpp  inner_scope.cpp  ip_address_parser.cpp  lambdaInheritance.cpp  morze_coder.cpp  myStrlen.c  nullptrNaming  nullptrNaming.cpp  numberRenderer.cpp  optional.cpp  optional.hpp  percentDiff.cpp  placementNew.cpp  platform_calculator.cpp  pointersAndConst.cpp  polynoms.txt  recursivelyCallingMain  recursivelyCallingMain.cpp  regex.cpp  templateFactorial.cpp  this_pointer.cpp  threadsOrder.cpp  trafic_light.cpp  trafic_light_config.txt  twoPolynomsAdding.cpp  twoSum.cpp  variadic_arguments.cpp
src/libCforExternC/: Clib.h
